--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,29 +1,34 @@
 <resources>
     <string name="app_name">IceRockPractice</string>
-    <string name="logo">Logo</string>
-    <string name="personal_access_token">Personal access token</string>
-    <string name="sign_in">SIGN IN</string>
-    <string name="retry">Retry</string>
-    <string name="no_connection_icon">No connection icon</string>
-    <string name="connection_error">Connection error</string>
-    <string name="check_your_internet_connection">Check your Internet connection</string>
-    <string name="folder_icon">Folder icon</string>
-    <string name="empty">Empty</string>
-    <string name="no_repositories_at_the_moment">No repositories at the moment</string>
-    <string name="refresh">Refresh</string>
-    <string name="error_icon">Error Icon</string>
-    <string name="something_error">Something error</string>
-    <string name="check_your_something">Check your something</string>
-    <string name="scales_icon">Scales icon</string>
-    <string name="license">License</string>
-    <string name="star_icon">Star icon</string>
-    <string name="stars">stars</string>
-    <string name="link_icon">Link icon</string>
-    <string name="fork_icon">Fork icon</string>
-    <string name="forks">forks</string>
-    <string name="watch_icon">Watch icon</string>
-    <string name="watchers">watchers</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="logout">Logout</string>
+    <string name="logo_description">Logo</string>
+    <string name="token_field_hint">Personal access token</string>
+    <string name="sign_in_button">SIGN IN</string>
+    <string name="retry_button">Retry</string>
+    <string name="no_connection_icon_description">No connection icon</string>
+    <string name="connection_error_title">Connection error</string>
+    <string name="connection_error_body">Check your Internet connection</string>
+    <string name="folder_icon_description">Folder icon</string>
+    <string name="empty_title">Empty</string>
+    <string name="empty_body">No repositories at the moment</string>
+    <string name="refresh_button">Refresh</string>
+    <string name="error_icon_description">Error Icon</string>
+    <string name="something_error_title">Something error</string>
+    <string name="check_your_something_body">Check your something</string>
+    <string name="scales_icon_description">Scales icon</string>
+    <string name="license_caption">License</string>
+    <string name="star_icon_description">Star icon</string>
+    <string name="stars_caption">stars</string>
+    <string name="link_icon_description">Link icon</string>
+    <string name="fork_icon_description">Fork icon</string>
+    <string name="forks_caption">forks</string>
+    <string name="watch_icon_description">Watch icon</string>
+    <string name="watchers_caption">watchers</string>
+    <string name="logout_dialog_title">Logout</string>
+    <string name="logout_dialog_message">Are you sure want to logout?</string>
+    <string name="logout_dialog_positive_button">Yes</string>
+    <string name="logout_dialog_negative_button">No</string>
+    <string name="error_dialog_positive_button">Ok</string>
+    <string name="error_dialog_title">Error</string>
+    <string name="repositories_fragment_title">Repositories</string>
+    <string name="authorization_fragment_caption">Authorization</string>
 </resources>
